[gd_scene load_steps=6 format=3 uid="uid://0og1dieocyor"]

[ext_resource type="Script" uid="uid://da54b6vhsrmmd" path="res://scripts/betting.gd" id="1_qidjw"]
[ext_resource type="Texture2D" uid="uid://buxry7eq5c8b1" path="res://assets/tablecloth_ridethedrin.jpg" id="2_o44lc"]
[ext_resource type="AudioStream" uid="uid://b7hmg6f2r8bj6" path="res://assets/sounds/poker-chip-dropping.wav" id="3_bj2rl"]
[ext_resource type="Texture2D" uid="uid://vnbeufws4vhi" path="res://assets/icons/two_beer_mug-removebg-preview.png" id="3_oun1i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f8p6y"]
bg_color = Color(9.02452e-09, 0.199414, 0.027574, 1)

[node name="Betting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qidjw")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1500.0
offset_bottom = 1500.0
texture = ExtResource("2_o44lc")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="BetLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 25
text = "How many sips do you want to bet"
horizontal_alignment = 1

[node name="BetInput" type="LineEdit" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_f8p6y")
alignment = 1
max_length = 1
expand_to_text_length = true
draw_control_chars = true

[node name="ConfirmButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_hover_pressed_color = Color(0.255659, 0.255659, 0.255659, 1)
theme_override_colors/font_hover_color = Color(0.255659, 0.255659, 0.255659, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 40
text = "Confirm"

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 250)
layout_mode = 2
texture = ExtResource("3_oun1i")
stretch_mode = 4

[node name="ChipBettingAudio" type="AudioStreamPlayer" parent="CenterContainer/VBoxContainer"]
stream = ExtResource("3_bj2rl")

[connection signal="pressed" from="CenterContainer/VBoxContainer/ConfirmButton" to="." method="_on_ConfirmBetButton_pressed"]
